# esp32-s3-goouuu

./: .gitignore  CMakeLists.txt  LICENSE
main/: CMakeLists.txt  application.c  application.h  gpio_button.c  gpio_button.h  i2s_audio.c  i2s_audio.h  main.c  network_socket.c  wav_audio.c  wav_audio.h
script/: augmentation.py  mfcc_process.py  mock_gemini.py  p0_audio_collect.py  p1_augment_positive.py  p1_generate_negative.py  tcp_receiver.py
